--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
                     </div>
 
                     <p id="errorName">*PREENCHA O CAMPO COM O NOME*</p>
-                    <p id="errorP">*PREENCHA O CAMPO COM AO MENOS DOIS NOMES*</p>
                 </article>
 
                 <!--Names-->
@@ -39,15 +38,15 @@
                     <div id="names"></div>
                     <button id="buttonSorteio" class="elementCFG" onclick="sorteio()">SORTEAR</button>
                 </article>
-            </section>
 
-            <!--Footer-->
-            <footer id="footerContainer">
-                <a href="https://github.com/thgomes1" target="_blank">
-                    by
-                    <span>Thiago Gomes</span>
-                </a>
-            </footer>
+                <!--Footer-->
+                <footer id="footerContainer" class="cent">
+                    <a href="https://github.com/thgomes1" target="_blank">
+                        by
+                        <span>Thiago Gomes</span>
+                    </a>
+                </footer>
+            </section>
         </main>
 
         <!--Result-->
